# planning-course

./: .gitignore  L7-HOMEWORK.rar  README.md
examples/hitzyz_hw5/: hitzyz_hw5.doc
hw_1_zcy/catkin_ws/: run.sh
hw_2_zcy/: hw2_writeup.doc  readme.txt
hw_3_answer/: install-ompl-ubuntu.sh  reference.txt
hw_3_answer/Matlab作业/: RRT.m
hw_3_zcy/: reference.txt
hw_3_zcy/Matlab作业/: RRT.m  cal_dist.m
hw_4_answer/: coeffs_dj.txt  cost_function.txt  cost_function_7th_degree.m  example.m  solve_obvp_t_test.m  test_partially_free.m
hw_4_answer/b-spline/: compute_curvature.m  compute_curvature_deri_dydx.m
hw_4_answer/catkin_ws/: build.sh  display.sh
hw_4_answer/catkin_ws/src/grid_path_searcher/: CMakeLists.txt
hw_4_answer/catkin_ws/src/grid_path_searcher/src/: demo_node.cpp  hw_tool.cpp
hw_4_zcy/: coeffs_dj.txt  coeffs_dj_t.txt  coeffs_dj_x.txt  cost_function_5th_degree.m  df_sim.mat  solve_obvp_t.m  solve_obvp_x.m  solve_obvp_x_test.m  test.m  test_t_variable.m  test_x_variable.m
hw_4_zcy/b-spline/: compute_deboor.m  deboor_deri_test.m
hw_5_answer/catkin_ws/: build.sh  run.sh
hw_5_answer/matlab/: getAbeq.m  getCt.m  getM.m  getQ.m  hw1_1.m  resample_points.m
hw_5_zcy/catkin_ws/: display.sh  waypoint.sh
hw_5_zcy/matlab/: data_analysis.m  getAbeq.m  getCt.m  getM.m  getQ.m  hw1_1.m  hw1_2.m  my_ransac.m  test_matrix_operation.m  test_ransac.m
hw_6_answer/b-spline/: GetOptBsplineCpts.m  d_deboor_to_points.m  deboor.m
hw_6_answer/code/: getAbeq.m  getAbeq1.m  getAbeq_bspline.m  getAbieq.m  getAbieq_bspline.m  getC.m  getQM.m  (+5 more)
hw_6_zcy/: min_jerk.fig
(+78 files in other folders)
